# egp

./: .hgignore  .travis.yml  CONTRIBUTING.rst  MMF_io.py  NIEUWE_k_GENERATIE_EFFICIENT!.py  NOTICE  README.rst  __init__.py  __main__.py  basic_types.py  constrainedField.py  constrainedField_crapincluded.py  cosmography.py  cosmology.py  cubep3m_clean.tar  fft.py  field_filtering.py  gadget_run_par.py  gaussianField.py  icgen.py  iconstrain.py  iconstrain_multi.py  io.py  periodic.py  plotting.py  powerSpectrum.py  setup.cfg  setup.py  toolbox.py  types.py  utils.py  zeldovich.py
crunch/: CMakeLists.txt  test_random_grid.py
crunch/src/: CMakeLists.txt  CMakeLists.txt_bosbook  CMakeLists.txt_kapteyn  TSC.cpp  _function_template_.cpp  crunch.cpp  crunch.hpp  gridsearch.cpp  resolution_independent_random_grid.cpp  twopcf.cpp
crunch/src/octree/: demo.cpp
docs/: Makefile  conf.py  index.rst  make.bat
egp/: __version__.py  basic_types.py  cosmology.py  cubep3m_clean.tar  fft.py  field_filtering.py  icgen.py  iconstrain.py  io.py  math.py  power.py  toolbox.py
egp/crunch/: test.py
egp/crunch/src/: CMakeLists.txt_lubuntu  TSC.cpp  gaussian_filter.cpp  octreesearch.cpp  zspace.cpp
egp/testing/: cubep3m_ic_io.py  einsumPrecisie.py  nDsymmetrize.py  periodicClassTest.py
egp/testing/cubep3m/: CubeP3MData.py
egp/testing/icgen/: cmbeasyDolagParamsSynchronous.plt  cumulative_cpdf_normalisatie.py  iconstrain_multi_test1_analyze_solvers.py  klein_verschil_nieuwe_k_grids.py  random_verschillende_resoluties.py  rhoSpherePeriodicArray.py  vergelijkNewOld.py  write_gadget_file.py  zeldovich_vs_2lpt_vs_nbody_positions.py
testing/: compare_cubep3m_gadget_runs.py  correlationsChecks.py  cubep3m_ic.py  cubep3m_ic_io.py  decorator_tests.py  einsumPrecisie.py
testing/cube3pm/: CubeP3MData.py  makefile_parameters.txt
testing/cubep3m/: compare_cubep3m_gadget_runs.py  cubep3m_IC-volgorde-test.py  loadIC.py  loadz0.py  rewrite_native_ic.py  timings.txt
testing/cython/: array_multiplication.py  array_multiplication_cython.pyx  setup.py
testing/icgen/: ConstrainedField_testing.py  MCXC+xyz_SCLx4.1.csv  cmbeasyDolagParams.plt  comparePStoDolag.py  constrain_cluster_peak_test.py  constraints1.csv  gridsizeBoxlenScaling.py  iconstrain.py  iconstrain2.py  iconstrain4.py  iconstrain4plus1.py  iconstrain5.py  iconstrain7.py  iconstrain_multi_test1.py  iconstrain_multi_test1b.py  iconstrain_multi_test1c.py  iconstrain_multi_test2.py  iconstrain_multi_test3_openopt.py  iconstrain_old.py  iconstrain_test0.py  iconstrain_test1.py  iconstrain_test10_analysis.py  iconstrain_test10_analysis_extra.py  iconstrain_test10_gauss_analysis.py  iconstrain_test1_PM.py  iconstrain_test1_PM_analysis.py  iconstrain_test1_analysis.py  iconstrain_test1_time.py  iconstrain_test2.py  iconstrain_test2_P3M.py  iconstrain_test2_analysis.py  iconstrain_test3.py  iconstrain_test3_PM_iterate.py  iconstrain_test3_analysis.py  iconstrain_test4.py  iconstrain_test6.py  iconstrain_test6_analysis.py  iconstrain_test6_time.py  iconstrain_test7_analysis.py  iconstrain_tester.py  (+16 more)
testing/icgen/iconstrain_multi_test1_solvers/: BFGS.csv  CG.csv  Krylov_root.csv  L-BFGS-B.csv  Powell.csv  SLSQP.csv  broyden1_root.csv  broyden2_root.csv  diagbroyden_root.csv  excitingmixing_root.csv  linearmixing_root.csv  lm_root.csv
testing/icgen/iconstrain_multi_test1b_solvers/: L-BFGS-B.csv  diagbroyden_root.csv  hybr_root.csv  lm_root.csv
testing/icgen/iconstrain_tests_old/: iconstrain_test1.py  iconstrain_test1_analysis.py  iconstrain_test1_time.py  iconstrain_test5.py  iconstrain_test6.py  iconstrain_test6_2lpt.py  (+1 more)
tests/: test_egp.py  test_lint.py
(+115 files in other folders)
